[package]
name = "daw_editor_plugin"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "daw_editor_plugin"

[dependencies]
claxon = "0.4"
rfd = "0.13"
# Plugin API
plugin_editor_api = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native", rev = "73e49370b650b9ff645f1bf0a074400236c2d46c" }

# UI dependencies
gpui = { git = "https://github.com/tristanpoland/zed", rev="2047043a00dc138e3d8127c8921c96927acea8f8", features = ["runtime_shaders", "macos-blade"] }
ui = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native", rev = "73e49370b650b9ff645f1bf0a074400236c2d46c" }
ui_common = { git = "https://github.com/Far-Beyond-Pulsar/Pulsar-Native", rev = "73e49370b650b9ff645f1bf0a074400236c2d46c" }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
parking_lot = "0.12"
tracing = "0.1"
log = "0.4"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"

# Time
chrono = "0.4"

# Async operations
futures = "0.3"

# Audio dependencies
cpal = "0.15"
rubato = "0.15"
fundsp = "0.18"
wgpu = "0.20"
smol = "1"
hound = "3.5"
lewton = "0.10"
flume = "0.11"
bytemuck = { version = "1.14", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
symphonia = { version = "0.5", features = ["mp3", "wav", "flac", "vorbis"] }
crossbeam = "0.8"
dashmap = "6.1"
